--- a/PA1_template.html
+++ b/PA1_template.html
@@ -355,7 +355,7 @@ display: none;
 
 
 <pre class="r"><code># Global options for all chunks
-knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)</code></pre>
+knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE, dev = &quot;png&quot;, fig.path = &quot;figure/&quot;)</code></pre>
 <div id="loading-and-preprocessing-the-data" class="section level2">
 <h2>Loading and preprocessing the data</h2>
 <pre class="r"><code>activity &lt;- read.csv(&quot;activity.csv&quot;)
